radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  annotations:
    reloader.stakater.com/auto: 'true'
    secret.reloader.stakater.com/reload: iscsi-chap-secret
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: radarr
      app.kubernetes.io/name: radarr
      app.kubernetes.io/instance: radarr
  template:
    metadata:
      labels:
        app: radarr
        app.kubernetes.io/name: radarr
        app.kubernetes.io/instance: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr
        ports:
        - containerPort: 7878
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: downloads
      volumes:
      - name: config
        iscsi:
          targetPortal: 172.19.74.139
          iqn: iqn.2000-01.com.synology:fs2.radarr-config.11cf152a97
          lun: 1
          fsType: ext4
          chapAuthDiscovery: false
          chapAuthSession: true
          secretRef:
            name: iscsi-chap-secret
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads
        name: downloads
