radarr/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: radarr

spec:
  ports:
  - port: 7878
    targetPort: 7878
    protocol: TCP
    name: http
  selector:
    app: radarr
