radarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Radarr
    gethomepage.dev/description: Movie Manager
    gethomepage.dev/group: Media
    gethomepage.dev/icon: radarr.png
spec:
  tls:
  - hosts:
    - radarr.k.oneill.net
    secretName: radarr-tls
  rules:
  - host: radarr.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
